# luplo

./: .gitignore  .mcp.json.example  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  README.md  SECURITY.md  alembic.ini  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
db/: env.py  script.py.mako
db/migrations/: 0001_init_schema.py  0002_auth_redesign.py  0003_item_types_and_context.py  0004_add_research_item_type.py  0005_auth_reset_tokens.py
demos/: README.md  impact.tape  recall.tape  reset-db.sh
demos/fixtures/: seed.sql
demos/output/: .gitkeep
docs/: conf.py  index.md  quickstart.md  requirements.txt
docs/concepts/: architecture.md  data-model.md  index.md  philosophy.md  positioning.md  search-pipeline.md
docs/guides/: index.md  local-worker.md  mcp-client.md  remote-server.md  tasks-and-qa.md  work-units.md
docs/project/: changelog.md  contributing.md  index.md  license.md  roadmap.md
docs/reference/: checks.md  cli.md  config.md  index.md  mcp-tools.md  semantic-impact.md
src/luplo/: __init__.py  cli.py  config.py  mcp.py
src/luplo/core/: __init__.py  actors.py  audit.py  db.py  errors.py  glossary.py  history.py  id_resolve.py  impact.py  item_types.py  items.py  links.py  models.py  projects.py  qa.py  systems.py  tasks.py  work_units.py  worker.py
src/luplo/core/backend/: __init__.py  local.py  protocol.py  remote.py
src/luplo/core/checks/: __init__.py  registry.py  runner.py  types.py
src/luplo/core/checks/rules/: __init__.py  dangling_edge.py  missing_rationale.py  undated_retention.py  unlinked_policy.py  unresolved_conflict.py
src/luplo/core/embedding/: __init__.py  local.py  null.py  protocol.py
src/luplo/core/extract/: __init__.py  pipeline.py
src/luplo/core/schemas/: __init__.py  decision.json  document.json  knowledge.json  policy.json  qa_check.json  research.json  task.json
src/luplo/core/search/: __init__.py  pipeline.py  tsquery.py
src/luplo/core/sync/: __init__.py  queue.py
src/luplo/server/: __init__.py  app.py  config.py
src/luplo/server/auth/: __init__.py  admin.py  deps.py  domain_filter.py  email.py  jwt.py  oauth.py  password.py  pkce.py  reset.py
src/luplo/server/auth/templates/: login.html
src/luplo/server/routes/: __init__.py  auth.py  checks.py  items.py  projects.py  search.py  work_units.py
tests/: conftest.py  test_actors.py  test_audit.py  test_auth_helpers.py  test_auth_jwt.py  test_auth_password.py  test_auth_routes.py  test_checks.py  test_cli.py  test_cross_project_scope.py  test_decision_proposal.py  test_extract.py  test_glossary.py  test_history.py  test_id_resolve.py  test_impact.py  test_item_types.py  test_items.py  test_items_context.py  test_links.py  test_local_backend.py  test_mcp.py  test_migration.py  test_password_reset.py  test_projects.py  test_qa.py  test_remote_backend.py  test_search.py  test_server.py  test_sync_queue.py  test_systems.py  test_task_edit.py  test_tasks.py  test_work_units.py  test_worker.py
