[project]
name = "luplo"
version = "0.6.2"
description = "AI memory that survives across sessions, teammates, and vendors."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "hanyul99" }]
dependencies = [
    "typer>=0.15",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "mcp>=1.0",
    "httpx>=0.28",
    "alembic>=1.15",
    "sqlalchemy>=2.0",
    "keyring>=25.0",
    "jsonschema>=4.23",
]

[project.urls]
Homepage = "https://github.com/luplo-io/luplo"
Documentation = "https://luplo.readthedocs.io"
Changelog = "https://github.com/luplo-io/luplo/blob/main/CHANGELOG.md"
Issues = "https://github.com/luplo-io/luplo/issues"

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "authlib>=1.4",
    "pyjwt[crypto]>=2.9",
    "argon2-cffi>=23.1",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
]
vector-local = [
    "sentence-transformers>=3.4",
    "pgvector>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "types-jsonschema>=4.23",
    "types-authlib>=1.3",
]

[project.scripts]
lp = "luplo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luplo"]

# ── Ruff ─────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = [
    # typer / FastAPI / Pydantic rely on runtime type introspection via
    # get_type_hints(); moving annotation-only imports into TYPE_CHECKING
    # blocks breaks Depends/Option/Query resolution at call time.
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
# typer.Option / typer.Argument / FastAPI Depends / Query are the
# idiomatic way to declare CLI / HTTP parameters — flake8-bugbear's
# B008 does not understand framework defaults.
"src/luplo/cli.py" = ["B008"]
"src/luplo/server/**/*.py" = ["B008"]
# Alembic migration SQL strings are intentionally inline.
"db/migrations/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["luplo"]

# ── Pyright ──────────────────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
# Optional extras that ship their own heavyweight deps (torch, pgvector).
# Type-checking these would force CI to install the full vector stack.
exclude = ["src/luplo/core/embedding/local.py"]
reportUnnecessaryTypeIgnoreComment = "error"

# ── Pytest ───────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ── Coverage ─────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/luplo"]
branch = true
omit = [
    # Optional vector-local extra — not exercised by the default test
    # suite and excluded from pyright for the same reason.
    "src/luplo/core/embedding/local.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.$",
]
